<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="24dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="right">
            <Spinner
                android:id="@+id/sel_language"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:spinnerMode="dropdown"
                android:textSize="16dp"
                android:layout_width="180dp" />
        </LinearLayout>

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal" />
        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:drawableStart="@drawable/ic_user1"
                android:hint="@string/string_username"/>

        </android.support.design.widget.TextInputLayout>
        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/login_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/string_password"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/link_forgot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:text="@string/button_forgot"
            android:textColor="@color/colorWhite"
            android:textSize="15dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorWhite"
            android:background="#e8732d"
            android:alpha="0.9"
            android:padding="12dp"
            android:text="@string/button_login"/>

        <TextView android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorWhite"
            android:text="@string/string_signup"
            android:gravity="center"
            android:textSize="15dp"/>

    </LinearLayout>
</ScrollView>
