<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">
        <ImageView
            android:id="@+id/shop_img"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_image"
            android:onClick="onPickerImage"
            android:scaleType="centerCrop" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="12dp"
            android:text="@string/string_selimage"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
            <EditText android:id="@+id/input_shopname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:drawableStart="@drawable/ic_user3"
                android:hint="@string/string_shopname" />
        </android.support.design.widget.TextInputLayout>
        <!-- mobile number -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
            <EditText android:id="@+id/input_seller_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_mobile"
                android:hint="@string/string_mobile" />
        </android.support.design.widget.TextInputLayout>

        <!--  Email Label -->

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/input_shopaddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    android:drawableStart="@drawable/ic_color_home"
                    android:hint="@string/string_shopaddress" />
            </LinearLayout>


        </android.support.design.widget.TextInputLayout>


        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
            <TextView android:id="@+id/input_shoplocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="16dip"
                android:visibility="invisible"/>

        </android.support.design.widget.TextInputLayout>
        <!-- Name Label -->
        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_seller_update"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#e8732d"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:padding="12dp"
            android:text="@string/button_update"/>
    </LinearLayout>
</ScrollView>